table overflow fix attempt 1

--- a/themes/whodathunk-theme/assets/css/main.css
+++ b/themes/whodathunk-theme/assets/css/main.css
@@ -23,6 +23,7 @@ table {
     border-collapse: collapse;
     border-top: 1px solid #999999;
     border-bottom: 1px solid #999999;
+    overflow: auto;
 }
 th,
 td {
